# spark_handson_exercice

./: pyproject.toml
src/fr/hymaia/exo1/: main.py  unit_test_sparkjob_wordcount.py
src/fr/hymaia/exo2/: main.py  main2.py
tests/clients_sample.csv/: .part-00000-86b92854-3009-42cf-89e7-29c961d503b6-c000.csv.crc  .part-00007-86b92854-3009-42cf-89e7-29c961d503b6-c000.csv.crc  .part-00014-86b92854-3009-42cf-89e7-29c961d503b6-c000.csv.crc  .part-00021-86b92854-3009-42cf-89e7-29c961d503b6-c000.csv.crc  part-00000-86b92854-3009-42cf-89e7-29c961d503b6-c000.csv  part-00007-86b92854-3009-42cf-89e7-29c961d503b6-c000.csv  part-00014-86b92854-3009-42cf-89e7-29c961d503b6-c000.csv  part-00021-86b92854-3009-42cf-89e7-29c961d503b6-c000.csv
tests/fr/hymaia/: test_integration_sparkjob_all_job.py  test_unit_sparkjob_aggregate.py  test_unit_sparkjob_clean.py  unit_test_sparkjob_aggregate.py  unit_test_sparkjob_clean.py
tests/villes_sample.csv/: .part-00000-df29d81f-3ed4-4666-8312-f2f0a2652ca1-c000.csv.crc  .part-00007-df29d81f-3ed4-4666-8312-f2f0a2652ca1-c000.csv.crc  .part-00014-df29d81f-3ed4-4666-8312-f2f0a2652ca1-c000.csv.crc  .part-00021-df29d81f-3ed4-4666-8312-f2f0a2652ca1-c000.csv.crc  part-00000-df29d81f-3ed4-4666-8312-f2f0a2652ca1-c000.csv  part-00007-df29d81f-3ed4-4666-8312-f2f0a2652ca1-c000.csv  part-00014-df29d81f-3ed4-4666-8312-f2f0a2652ca1-c000.csv  part-00021-df29d81f-3ed4-4666-8312-f2f0a2652ca1-c000.csv
